--- a/style.css
+++ b/style.css
@@ -85,3 +85,36 @@ a{
     color: #e5e7eb;
 }
 
+
+
+.information{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 50px;
+}
+.information > .info{
+    font-size: 36px;
+    font-weight: 700;
+    color: #1F2937;
+}
+.container{
+    display: flex;
+    gap: 10px;
+}
+
+.card>.image{
+    border: 2px solid;
+    border-radius: 5px;
+    width: 150px;
+    height: 150px;
+}
+.details{
+    text-align: center;
+}
+
+.card{
+    max-width: 150px;
+    
+}
+
