--- a/style.css
+++ b/style.css
@@ -4,9 +4,12 @@
 }
 body{
     /* margin: 0 60px 0 60px; */
+    display: flex;
+    flex-direction: column;
 }
 
 .header{
+    flex: 1 1 500px;
     display: flex;
     flex-direction: column;
     margin: 0;
@@ -89,6 +92,7 @@ a{
 
 .information{
     display: flex;
+    flex: 1 1 500px;
     flex-direction: column;
     align-items: center;
     margin-bottom: 50px;
@@ -118,3 +122,67 @@ a{
     
 }
 
+.quote{
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex: 1 1 500px;
+    padding:100px;
+}
+.quote>.lines{
+    font-size: 36px;
+    font-style: oblique;
+    color: #1F2937;
+    max-width: 80%;
+}
+
+.quote>.lines>.author{
+    font-weight: 600;
+    text-align: end;
+}
+.section4{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.sign-up{
+    background-color: #3882f6;
+    display: flex;
+    align-items: center;
+    margin: 80px 20% ;
+    padding: 30px 100px 30px 100px;
+    border-radius: 5px;
+    justify-content: space-between ;
+    color: #E5E7EB;
+    flex: 1 1 350px;
+
+}
+.heading>p{
+    margin: 0;
+    padding: 0;
+}
+.section4>.sign-up>.heading>.sub-heading{
+    font-weight: 700;
+}
+
+.sign-up>.button>a{
+    border: #E5E7EB 2px solid;
+    padding: 5px 12px 5px 12px;
+    border-radius: 5px;
+}
+
+footer{
+    background-color: #1F2937;
+    display: flex;
+    padding: 50px;
+    align-items: center;
+    justify-content: center;
+    flex: 1 1 250px;
+
+}
+
+footer>p{
+    color: #E5E7EB;
+}
