--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+
 *{
     font-family: Roboto;
-    
+    margin: 0;
+    padding: 0;
 }
 body{
     /* margin: 0 60px 0 60px; */
     display: flex;
     flex-direction: column;
+    font-family: 'Roboto',sans-serif;
 }
 
 .header{
@@ -105,6 +109,7 @@ a{
 .container{
     display: flex;
     gap: 10px;
+    
 }
 
 .card>.image{
