--- a/style.css
+++ b/style.css
@@ -1,26 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
-
 *{
-    font-family: Roboto;
     margin: 0;
     padding: 0;
 }
 body{
     /* margin: 0 60px 0 60px; */
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     font-family: 'Roboto',sans-serif;
 }
 
 .header{
-    flex: 1 1 500px;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    padding: 0 80px 0 80px;
+    padding: 1em 13em;
     background-color: #1F2937;
     /* justify-content: center; */
-    padding-bottom: 80px;
+    padding-bottom: 120px;
 }
 
 nav{
@@ -50,7 +44,9 @@ li a{
 
 .header>.body{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 20px;
+    /* align-items: center; */
 }
 .hero-text{
     flex-basis: 50%;
@@ -62,6 +58,8 @@ li a{
     font-weight: 800;
     color: #f9faf8;
     margin: 0;
+    padding-bottom: 20px;
+    padding-top: 100px;
 }
 
 .header>.body>.hero-text>.secondary{
@@ -83,6 +81,7 @@ li a{
     justify-content: center;
     align-items: center;
     padding: 5px;
+    margin-top: 40px;
 }
 .body>.hero-text>.button:hover{
     background-color: lightcyan;
@@ -100,6 +99,7 @@ a{
     flex-direction: column;
     align-items: center;
     margin-bottom: 50px;
+    padding: 50px;
 }
 .information > .info{
     font-size: 36px;
@@ -108,8 +108,12 @@ a{
 }
 .container{
     display: flex;
-    gap: 10px;
-    
+    gap: 50px;
+    justify-content: center;
+    align-items: center; 
+    flex-wrap: wrap;
+    margin: 3em 0 6em 0;
+    padding: 50px;
 }
 
 .card>.image{
@@ -120,6 +124,7 @@ a{
 }
 .details{
     text-align: center;
+    padding: 10px;
 }
 
 .card{
@@ -138,7 +143,8 @@ a{
 }
 .quote>.lines{
     font-size: 36px;
-    font-style: oblique;
+    font-style: italic;
+    font-weight: 100;
     color: #1F2937;
     max-width: 80%;
 }
